// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenses Summary page with multiple expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <p
      className="page-header__title"
    >
       There are a total of 
      <span>
         
        23
         
      </span>
      expenses
       and the the total expenditure is :
      <span>
         
        $290,909
      </span>
         
    </p>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render expenses Summary page with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <p
      className="page-header__title"
    >
       There are a total of 
      <span>
         
        1
         
      </span>
      expense
       and the the total expenditure is :
      <span>
         
        $2
      </span>
         
    </p>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
